--- a/src/assets/scss/components/_index.scss
+++ b/src/assets/scss/components/_index.scss
@@ -3,3 +3,4 @@
 @import "../../../components/Form/index";
 @import "../../../components/Login/index";
 @import "../../../components/SignUp/index";
+@import "../../../components/Finder/index";
