--- a/src/assets/scss/components/_index.scss
+++ b/src/assets/scss/components/_index.scss
@@ -4,3 +4,7 @@
 @import "../../../components/Login/index";
 @import "../../../components/SignUp/index";
 @import "../../../components/Finder/index";
+@import "../../../components/HotelCard/index";
+@import "../../../components/HotelList/index";
+@import "../../../components/Searchbox/index";
+@import "../../../components/Map/index";
