--- a/src/assets/scss/components/_index.scss
+++ b/src/assets/scss/components/_index.scss
@@ -8,3 +8,7 @@
 @import "../../../components/HotelList/index";
 @import "../../../components/Searchbox/index";
 @import "../../../components/Map/index";
+@import "../../../components/Footer/index";
+@import "../../../components/ButtonLike/index";
+@import "../../../components/Portal/index";
+@import "../../../uikit/Loader/index";
