--- a/src/assets/scss/pages/_index.scss
+++ b/src/assets/scss/pages/_index.scss
@@ -1,2 +1,4 @@
 @import "../../../pages/HotelsPage/index";
 @import "../../../pages/MapsPage/index";
+@import "../../../pages/MainPage/index";
+@import "../../../pages/ProfilePage/index";
