--- a/src/components/Portal/_index.scss
+++ b/src/components/Portal/_index.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   width: 100vw;
   height: 100vh;
+  z-index: 1500;
   &__button {
     position: absolute;
     top: 0%;
